# brik

./: .gitignore  .markdownlintignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: setup-labels.sh
.github/workflows/: ci.yaml
docs/: code-coverage.md  historical-changelog.md  namespaces.md  nsdefaults.md
examples/: apply_xmlns.rs  find_matches.rs  namespace_defaults.rs  namespace_selectors.rs  namespaces.rs  ns_defaults.rs  quickstart.rs  stack-overflow.rs  template_processing.rs
scripts/: test-safe-feature.sh
src/: attributes.rs  cell_extras.rs  iter.rs  lib.rs  node_data_ref.rs  parser.rs  select.rs  serializer.rs  tree.rs
src/attributes/: attrib.rs  attribs.rs  expanded_name.rs  mod.rs
src/iter/: ancestors.rs  descendants.rs  element_iterator.rs  elements_in_namespace.rs  filter_iterators.rs  mod.rs  node_edge.rs  node_iterator.rs  node_ref_impls.rs  select.rs  siblings.rs  traverse.rs
src/ns/: apply_xmlns.rs  error.rs  mod.rs
src/ns/defaults/: builder.rs  mod.rs  nsdefaults.rs
src/ns/defaults/parse/: mod.rs  parse_preamble.rs  parser.rs  preamble.pest  preamble.rs  tag_info.rs
src/parser/: mod.rs  parse_fragment.rs  parse_html.rs  parse_opts.rs  sink.rs
src/select/: attr_value.rs  brik_selectors.rs  element_impl.rs  local_name_selector.rs  mod.rs  pseudo_class.rs  pseudo_element.rs  selector.rs  selector_context.rs  selectors.rs  specificity.rs
src/tree/: doctype.rs  document_data.rs  element_data.rs  mod.rs  node.rs  node_data.rs  node_ref.rs
