[package]
name = "brik"
version = "0.8.2"
authors = [
  "Adam Mill <hismajesty@theroyalwhee.com>",
  "Brave Authors",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "HTML tree manipulation library - a building block for HTML parsing and manipulation"
repository = "https://github.com/theroyalwhee0/brik"
edition = "2018"

[lib]
name = "brik"

[lints.rust]
# Unsafe code policy:
# - Default: unsafe code is allowed for performance
# - With 'safe' feature: all unsafe blocks are disabled via cfg
#
# To build with safe mode: cargo build --features safe
# To test with safe mode: cargo test --features safe
#
# Note: This only affects brik's code. Dependencies may still contain unsafe code.
# The unsafe blocks are wrapped with #[cfg(not(feature = "safe"))], so enabling
# the 'safe' feature results in zero unsafe blocks in brik.
missing_docs = "deny"

[lints.rustdoc]
missing_crate_level_docs = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"
redundant_explicit_links = "deny"

[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
missing_docs_in_private_items = "deny"
missing_panics_doc = "deny"
missing_errors_doc = "deny"
missing_safety_doc = "deny"

[dev-dependencies]
# Testing.
tempfile = "3.23.0"

[dependencies]
# HTML parsing.
html5ever = "0.35.0"

# CSS selector parsing and matching.
cssparser = "0.35.0"
selectors = "0.32.0"

# Data structures.
indexmap = "2.12.0"
precomputed-hash = "0.1.1"

[features]
# Enable bloom filter optimization for faster selector matching.
bloom-filter = []

# Enable safe mode (no unsafe code in brik). When enabled, uses safe alternatives.
# Safe mode allows brik to be built without any unsafe blocks.
# Note: This only affects brik's code, not its dependencies.
# Default: unsafe mode (for performance)
# To enable safe mode: cargo build --features safe
safe = []
