[package]
name = "brik"
version = "0.9.2"
authors = [
  "Adam Mill <hismajesty@theroyalwhee.com>",
  "Brave Authors",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "HTML tree manipulation library - a building block for HTML parsing and manipulation"
repository = "https://github.com/theroyalwhee0/brik"
edition = "2018"

[lib]
name = "brik"

[[example]]
name = "namespaces"
required-features = ["namespaces"]

[[example]]
name = "namespace_selectors"
required-features = ["namespaces"]

[[example]]
name = "template_processing"
required-features = ["namespaces"]

[[example]]
name = "ns_defaults"
required-features = ["namespaces"]

[[example]]
name = "apply_xmlns"
required-features = ["namespaces"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.rustdoc]
missing_crate_level_docs = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"
redundant_explicit_links = "deny"

[lints.clippy]
module_inception = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
missing_docs_in_private_items = "deny"
missing_panics_doc = "deny"
missing_errors_doc = "deny"
missing_safety_doc = "deny"

[dev-dependencies]
# Testing.
tempfile = "3.23.0"

[dependencies]
# Data structures.
indexmap = "2.12.0"
precomputed-hash = "0.1.1"

# HTML parsing.
html5ever = "0.35.0"

# CSS selector parsing and matching.
cssparser = "0.35.0"
selectors = "0.32.0"

# General parsing.
pest = { version = "2.8.3", optional = true }
pest_derive = { version = "2.8.3", optional = true }

[features]
default = []
full = ["namespaces"]

# Safe Mode - No unsafe code in library.
# This does not apply to dependencies.
safe = []

# Namespace support.
namespaces = ["dep:pest", "dep:pest_derive"]
